<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ticket_search"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/ticket_search" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_ask_question"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/ask_question" />
    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
