<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_levels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_60"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/card_dialog_width"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/input_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_title_height"
                android:background="@color/colorAccent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/levels_dialog"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_input_padding" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="@dimen/dialog_radiobuttons"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/checkbox_margin"
                android:checkedButton="@+id/econom"
                android:gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/econom"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/control_dimen"
                    android:button="@null"
                    android:drawableLeft="@drawable/checkbox_button_drawable_small"
                    android:drawablePadding="@dimen/checkbox_margin"
                    android:text="@string/econom"
                    android:textSize="@dimen/text_input_font_size" />

                <RadioButton
                    android:id="@+id/business"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/control_dimen"
                    android:layout_marginBottom="@dimen/checkbox_margin"
                    android:button="@null"
                    android:drawableLeft="@drawable/checkbox_button_drawable_small"
                    android:drawablePadding="@dimen/checkbox_margin"
                    android:text="@string/business"
                    android:textSize="@dimen/text_input_font_size" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/close_levels"
                    android:layout_width="@dimen/dialog_button_width"
                    android:layout_height="@dimen/dialog_button_height"
                    android:background="@drawable/grey_button"
                    android:text="@string/close"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="@dimen/drawable_margin"
                    android:layout_height="match_parent" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/done_level"
                    android:layout_width="@dimen/dialog_button_width"
                    android:layout_height="@dimen/dialog_button_height"
                    android:background="@drawable/blue_button"
                    android:text="@string/done"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>