<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/dialog_persons"
    android:layout_height="match_parent"
    android:background="@color/black_60"
    android:gravity="center"
    android:visibility="gone"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/card_dialog_width"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/input_corner_radius"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_title_height"
                android:background="@color/colorAccent">

                <TextView
                    android:layout_width="match_parent"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_input_padding"
                    android:gravity="center"
                    android:text="@string/persons_count"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/count_minus"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:src="@drawable/count_minus"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:id="@+id/count"
                    android:layout_width="@dimen/text_input_padding"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_input_padding"
                    android:textColor="@android:color/black"
                    android:text="1"/>

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/count_plus"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:src="@drawable/count_plus"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/close_persons"
                    android:background="@drawable/grey_button"
                    android:text="@string/close"
                    android:textColor="@android:color/white"
                    android:layout_width="@dimen/dialog_button_width"
                    android:layout_height="@dimen/dialog_button_height" />

                <View
                    android:layout_width="@dimen/drawable_margin"
                    android:layout_height="match_parent"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/done_persons"
                    android:background="@drawable/blue_button"
                    android:text="@string/done"
                    android:textColor="@android:color/white"
                    android:layout_width="@dimen/dialog_button_width"
                    android:layout_height="@dimen/dialog_button_height" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>